AyaClub 1.0.6, 2018-08-29
------------------------
- updating screenshot.png according to the new WordPress.org requirements

AyaClub 1.0.5, 2018-08-04
------------------------
- display slider and homepage widgets only on static homepage
- remove default demo content

AyaClub 1.0.4, 2018-05-12
------------------------
- changing slider images
- fix issue with posts date format

AyaClub 1.0.3, 2018-01-23
------------------------
- add Slider
- add homepage widgets

AyaClub 1.0.2, 2018-01-17
------------------------
- fix issue in style.css with text domain
- remove food-and-drink theme tag from style.css
- add sanitize_callback function 

AyaClub 1.0.1, 2018-01-17
------------------------
- fix issue with Customize Animations checkbox

AyaClub 1.0.0, 2017-10-30
------------------------
- Initial release