@@ -4,7 +4,7 @@ Description: AyaClub is fully Responsive Music Club WordPress Theme. Features: A
 Author: ayatemplates
 Author URI: https://ayatemplates.com
 Theme URI: https://ayatemplates.com/product/ayaclub
-Version: 1.0.6
+Version: 1.0.7
 Text Domain: ayaclub
 Tags: blog, entertainment, two-columns, right-sidebar, custom-logo, custom-background, custom-header, custom-menu, featured-images, threaded-comments, translation-ready, sticky-post, theme-options, footer-widgets
 License: GNU General Public License v2.0
@@ -333,7 +333,7 @@ article,
 	padding:10px 0 0 0;
 }
 
-#sidebar ul:not(.social-widget) > li:before,
+#sidebar ul:not(.social-widget):not(.ui-tabs-nav) > li:before,
 article ul > li:before {
 	content:"\f105";
 	font-family:'FontAwesome';
@@ -428,7 +428,7 @@ article,
 	background-color:#fff;
 }
 
-.col ul:not(.social-widget) > li:before {
+.col ul:not(.social-widget):not(.ui-tabs-nav) > li:before {
 	font-family:'FontAwesome';
 	font-style:normal;
 	font-weight:normal;
@@ -1170,7 +1170,7 @@ blockquote {
 	padding:0 5px 1px 1px;
 	margin-bottom:-2px;
 	font-weight:normal;
-	font-size:14px;
+	font-size:22px;
 	color:#eeeeee;
 	letter-spacing:1px;
 	float:left;
