@@ -1,3 +1,7 @@
+AyaClub 1.0.7, 2018-10-25
+------------------------
+- add instructions in readme.txt file how to configure the Homepage slider
+
 AyaClub 1.0.6, 2018-08-29
 ------------------------
 - updating screenshot.png according to the new WordPress.org requirements
